tests/baselines/reference/ES5For-of9.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of9.ts(4,1): error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of9.ts (1 errors) ====
    function foo() {
        return { x: 0 };
    }
    for (foo().x of []) {
    ~~~
!!! error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.
        for (foo().x of []) {
            var p = foo().x;
        }
    }